@@ -1429,10 +1429,10 @@ __stp_utrace_task_finder_target_quiesce(u32 action,
 		}
 	}
 	else {
-		/* Call the callbacks.  Assume that if the thread is a
-		 * thread group leader, it is a process. */
-		__stp_call_callbacks(tgt, tsk, 1, (tsk->pid == tsk->tgid));
- 
+		/* NB make sure we run mmap callbacks before other callbacks
+		 * like 'probe process.begin' handlers so that the vma tracker
+		 * is already initialized in the latter contexts */
+
 		/* If this is just a thread other than the thread
 		   group leader, don't bother inform map callback
 		   clients about its memory map, since they will
@@ -1440,6 +1440,10 @@ __stp_utrace_task_finder_target_quiesce(u32 action,
 		if (tgt->mmap_events == 1 && tsk->tgid == tsk->pid) {
 			__stp_call_mmap_callbacks_for_task(tgt, tsk);
 		}
+
+		/* Call the callbacks.  Assume that if the thread is a
+		 * thread group leader, it is a process. */
+		__stp_call_callbacks(tgt, tsk, 1, (tsk->pid == tsk->tgid));
 	}
 
 	__stp_tf_handler_end();
